fix: filters menu z-index

--- a/components/primitives/Menu/_styles.scss
+++ b/components/primitives/Menu/_styles.scss
@@ -13,6 +13,7 @@
   height: 100vh;
   background-color: var(--black);
   transition: left 0.4s ease-in-out;
+  pointer-events: all;
 
   @include base.respond(functions.break(mobile), min) {
     background-color: transparent;
